--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Classifier.App"
+﻿<Application x:Class="DataClassifier.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Classifier"
+             xmlns:local="clr-namespace:DataClassifier"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
